--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,10 +1,5 @@
-.nav {
+.nav ul {
+  list-style-type: none;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1rem;
-  background-color: #333;
-  color: #fff;
-  height: 3rem;
+  gap: 4rem;
 }
