--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
   font-size: 10px;
   --max-width: 1100px;
 
+  /* Colors */
   --soft-orange: hsl(35, 77%, 62%);
   --soft-red: hsl(5, 85%, 63%);
   --off-white: hsl(36, 100%, 99%);
@@ -9,7 +10,39 @@
   --dark-grayish-blue: hsl(236, 13%, 42%);
   --very-dark-blue: hsl(240, 100%, 5%);
 
-  --font-size-paragraph: 1.5rem;
+  /*  Paragraph */
+  --fs-paragraph: 1.5rem;
+  --lh-paragraph: 2.6rem;
+  --fw-paragraph: 400;
+
+  /* Headers */
+  --fs-header-xl-desktop: 5.6rem;
+  --fs-header-xl-mobile: 4rem;
+  --fs-header-xl: var(--fs-header-xl-desktop);
+  --lh-header-xl-desktop: 5.6rem;
+  --lh-header-xl-mobile: 4rem;
+  --lh-header-xl: var(--lh-header-xl-desktop);
+  --fw-header-xl: 800;
+
+  --fs-header-l-desktop: 4rem;
+  --fs-header-l-mobile: 3.2rem;
+  --fs-header-l: var(--fs-header-l-desktop);
+  --lh-header-l-desktop: 4rem;
+  --lh-header-l-mobile: 3.2rem;
+  --lh-header-l: var(--lh-header-l-desktop);
+  --fw-header-l: 700;
+
+  --fs-header-m: 3.2rem;
+  --lh-header-m: 3.2rem;
+  --fw-header-m: 700;
+
+  --fs-header-s: 2rem;
+  --lh-header-s: 2.4rem;
+  --fw-header-s: 800;
+
+  --fs-header-xs: 1.8rem;
+  --lh-header-xs: 2.4rem;
+  --fw-header-xs: 800;
 
 }
 
