--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,10 +1,44 @@
 .hero-container {
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 30rem 18rem;
+  grid-template-areas:
+    "hero-image hero-image"
+    "hero-title hero-text";
+  gap: 2.8rem 3rem;
 }
 
-.hero-image{
-  background-size: contain;
-  background-position: center;
+.hero-image {
   position: relative;
   width: 100%;
+  height: 100%;
+  grid-area: hero-image;
+}
+
+.hero-title {
+  grid-area: hero-title;
+  font-size: var(--fs-header-xl);
+  font-weight: var(--fw-header-xl);
+  line-height: var(--lh-header-xl);
+}
+
+.hero-description-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  justify-content: space-between;
+}
+
+.hero-text {
+  grid-area: hero-text;
+  font-size: var(--fs-paragraph);
+}
+
+@media (max-width: 768px) {
+  .mobile {
+    display: block;
+  }
+  .desktop {
+    display: none;
+  }
 }
