--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,4 +2,13 @@
   display: grid;
   grid-template-columns: 73fr 35fr;
   grid-template-rows: auto auto;
+  gap: 7rem 3rem;
+}
+
+@media (max-width: 768px) {
+  .main-page-grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
 }
