finish desktop template

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -15,6 +15,10 @@
   height: 100%;
   grid-area: hero-image;
 }
+.hero-title-container {
+  display: flex;
+  align-items: flex-end;
+}
 
 .hero-title {
   grid-area: hero-title;
