--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,7 +1,7 @@
 .hero-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 30rem auto;
+  grid-template-rows: 30fr 18fr;
   grid-template-areas:
     "hero-image hero-image"
     "hero-title hero-text";
@@ -43,6 +43,7 @@
   .hero-container {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 30rem auto auto;
     grid-template-areas:
       "hero-image"
       "hero-title"
