--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,16 +1,19 @@
 .main-page-grid-container {
   display: grid;
   grid-template-columns: 73fr 35fr;
-  /* grid-template-rows: 511px auto; */
   gap: 7rem 3rem;
   grid-template-areas: "hero-container column-news"
                         "row-news row-news";
+  margin-block-end: 8rem;
 }
 
 @media (max-width: 768px) {
   .main-page-grid-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
+    grid-template-areas: "hero-container"
+                         "column-news"
+                         "row-news";
+    gap: 6.4rem;
   }
 }
