--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 
   /* Colors */
   --soft-orange: hsl(35, 77%, 62%);
-  --soft-red: hsl(5, 85%, 63%);
+  --soft-red: #f15e50;
   --off-white: hsl(36, 100%, 99%);
   --grayish-blue: hsl(233, 8%, 79%);
   --dark-grayish-blue: hsl(236, 13%, 42%);
